# paper-search-mcp

./: .env.example  Dockerfile  README.md  pyproject.toml  smithery.yaml  start_server.sh
paper_search_mcp/: server.py
paper_search_mcp/academic_platforms/: arxiv.py  biorxiv.py  google_scholar.py  hub.py  iacr.py  medrxiv.py  semantic.py
tests/: test_server.py
