[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paper-search-mcp"
version = "0.1.1"
authors = [
  { name = "P.S Zhang", email = "pengsongzhang96@gmail.com" },
]
description = "A MCP server for searching and downloading academic papers from multiple sources."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "requests",
    "feedparser",
    "fastmcp",
    "mcp[cli]>=1.6.0",
    "PyPDF2>=3.0.0",  # 添加这一行
]

[tool.hatch.build.targets.wheel]
packages = ["paper_search_mcp"]
